# embedded-tools-library

./: .clang-format  .gitignore  CLIActor.cpp  CLIActor.h  CMakeLists.txt  ConsoleApplication6.sln  IDataMessage.h  LogFileActor.cpp  LogFileActor.h  TimerModule.cpp  TimerModule.h  WindowsMessageQueue.cpp  WindowsMessageQueue.h  main.cpp  message_lib.sln  noch.vcxproj  noch.vcxproj.filters  readme.md
ConsoleApplication6/: Actor.h  ActorModel.cpp  ActorModel.h  BaseActor.h  CLIActor.cpp  CLIActor.h  ConsoleApplication6.cpp  ConsoleApplication6.vcxproj  ConsoleApplication6.vcxproj.filters  ControlBlock.h  Dispatcher.cpp  Dispatcher.h  IActor.h  IActorQueue.cpp  IActorQueue.h  IAllocator.h  IControlBlock.h  IManagedMultiPoolSource.h  IManagedPool.h  IManagedStorage.cpp  IManagedStorage.h  IMessage.h  IMessagePool.h  IMultiPool.h  IMultiPoolSource.cpp  IMultiPoolSource.h  IPool.h  IPoolResource.cpp  IPoolResource.h  IQueue.h  IRandomAccessPool.cpp  IRandomAccessPool.h  IRefCountedControlBlock.h  IRouter.h  IStack.h  LogActor.cpp  LogActor.h  LogFileActor.cpp  LogFileActor.h  MessageHandle.cpp  (+66 more)
src/: CMakeLists.txt  ControlBlock.h  Dispatcher.h  IActor.h  IActorQueue.h  IControlBlock.h  IMessage.h  IMultiPool.h  IMultiPoolSource.h  IPool.h  IPoolMessage.cpp  IPoolMessage.h  IQueue.h  IRouter.h  IStack.h  MessagePool.h  TAlignedBuffer.h  TArrayList.h  TArrayListBuffer.h  TContiguousPool.h  TContiguousPoolBuffer.h  TDispatchRouter.h  TLockGuard.h  TMultiPool.h  TPoolMessage.h  TQueue.h  TSharedPoolPtr.h  TStack.h  TStaticArrayList.h  TStaticContiguousPool.h  TStaticQueue.h  (+10 more)
(+7 files in other folders)
